--- a/css/login.css
+++ b/css/login.css
@@ -28,8 +28,9 @@ header {
   outline: none; /* 포커스 테두리 제거 */
 }
 .error {
+  line-height: 2;
   color: red;
-  font-size: 1vw;
+  font-size:13px;
 }
 .logingform {
   margin-top: 150px;
@@ -105,8 +106,9 @@ form button a{
   }
   @media screen and (max-width: 768px) {
     .error {
+      line-height: 2;
       color: red;
-      font-size: 1.5vw;
+      font-size:13px;
     }
     .login{
       width: 50%;
@@ -117,7 +119,6 @@ form button a{
     }
     form button{
       font-size: 2vw;
-      padding: 1%;
     }
     .icon img {
       display: inline;
@@ -127,8 +128,9 @@ form button a{
     }
     @media screen and (max-width: 480px){
       .error {
+        line-height: 2;
         color: red;
-        font-size: 2vw;
+        font-size:13px;
       }
       .login{
         width: 70%;
@@ -156,8 +158,9 @@ form button a{
 }
 @media screen and (max-width: 320px){
   .error {
+    line-height: 2;
     color: red;
-    font-size: 2.5vw;
+    font-size:13px;
   }
   .login{
     width: 70%;
@@ -167,6 +170,7 @@ form button a{
   }   
    form button{
     font-size: 4vw;
+    
 }
 footer{
   width: 100%;
