--- a/css/minju.css
+++ b/css/minju.css
@@ -82,7 +82,8 @@ hr {
   width: 100%;
   max-width: 100%;
   height: auto;
-  padding: 5%;
+  padding: 7%;
+  margin-top: -4%;
   margin-bottom: -5%;
   overflow-x: hidden;
   overflow-y: hidden;
