--- a/css/seunga.css
+++ b/css/seunga.css
@@ -733,6 +733,23 @@ figcaption p {
     padding: 0 5% 0 5% ; */
   }
 }
+@media screen and (max-width: 450px) {
+  .counter-wrapper {      
+   padding: 30px 0;
+  }
+ .counter {
+     line-height: 20px;
+ }
+     .count-title {
+         font-size: 23px;
+     }
+ .sec1-main-text h4 {
+         font-size: 20px;
+ }
+ .section2 {
+         padding: 0px 20px;
+ }
+}
 @media screen and (max-width: 420px) {
   .section1 {
     padding: 16% 0 8% 0;
