--- a/css/kyungran.css
+++ b/css/kyungran.css
@@ -37,7 +37,7 @@
   border-radius: 50px;
   /* border: 1.9px solid #134aa9; */
   color: #333333;
-  background: rgb(249 249 249);
+  background: #f4f4f4;
   text-decoration: none;
 }
 .tab-nav a:hover,
@@ -271,7 +271,7 @@
   height: 100%;
   padding-bottom: 10px;
 }
-.img-box > a:hover .img1  {
+.img-box > a:hover .img1 {
   filter: brightness(0.4);
 }
 .img-box > a:hover::after {
