--- a/css/minju.css
+++ b/css/minju.css
@@ -1,74 +1,34 @@
 @charset "utf-8";
-/* 민주 */
-/* flying baneer */
-/* 신청하기 버튼 */
-.pop-button {
-  position: relative;
-  position: fixed;
-
-  right: 3%;
-  bottom: 15%;
-  z-index: 99999;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.pop-button img {
-  width: 50%;
-}
-.pop-button span {
-  font-family: "KBO-Dia-Gothic_light";
-  position: absolute;
-  top: 38px;
-  left: 32%;
-  color: #fff;
-  z-index: 9999999;
-}
-.pop-button .chat-btn {
-  animation: updown 1.5s infinite;
-  /* -webkit-animation:updown 1.5s infinite; */
-  /* 다른 브라우저에서도 작동 될 수 있게 하기 위해 -webkit을 사용. */
-}
+/* <!-- 탑버튼 --> */
 .top-button {
   position: relative;
-  z-index: 999999;
-  display: block;
-}
-.top-button .top-btn {
-  display: block;
-  position: fixed;
-  bottom: 10%;
-  right: 5.8%;
-  background-color: rgba(255, 255, 255, 0.8);
-  background-color: #134aa9;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-}
-.top-btn img {
-  width: 50%;
-}
-.top-button .top-btn img {
-  transform: rotate(180deg);
-}
-.top-button .top-btn img.up {
-  transform: rotate(0deg);
-}
-/* 애내메이션 효과 */
-@keyframes updown {
-  0% {
-    transform: translatey(0);
+    z-index: 999999;
+    display: block;
   }
-  50% {
-    transform: translatey(-10%);
+  .top-button .top-btn {
+    display: block;
+      position: fixed;
+        bottom: 15%;
+    right: 3.2%;
+    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #134aa9;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
   }
-  100% {
-    transform: translatey(0);
+  .top-btn img{
+    width: 50%;
   }
-}
+  .top-button .top-btn img {
+    transform: rotate(180deg);
+  }
+  .top-button .top-btn img.up {
+    transform: rotate(0deg);
+  }
 /* =============================================== */
-
+/* 민주 */
 .inner {
   max-width: 1400px;
   margin: 0 auto;
@@ -76,16 +36,10 @@
 .section4 .nanumsns-swiper .swiper-button-next::after {
   display: none;
 }
-.section4 .nanumsns-swiper .swiper-button-prev::after {
-  display: none;
-}
-.snsImages-btn2{
-display: none;
-}
 .snsImage-btn1 {
   position: absolute;
   top: 15px;
-  right:  3200%;
+  right: 880px;
 }
 .section4 {
   display: flex;
@@ -190,8 +144,6 @@ footer .right h1 span {
 footer .right p {
   line-height: 1.5;
   text-align: left;
-  letter-spacing: 1px;
-  font-family: "KBO-Dia-Gothic_light";
 }
 footer .left {
   float: right;
@@ -216,15 +168,50 @@ footer .left button {
   border: 1px solid #fff;
   color: #fff;
   font-family: "KBO-Dia-Gothic_light";
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+}
+footer p {
+  letter-spacing: 2px;
 }
 footer .line {
   display: none;
 }
+/* ================================================ */
+/* flying baneer */
+/* 신청하기 버튼 */
+.pop-button {
+  position: fixed;
+  right: 30px;
+  bottom:  20%;
+  z-index: 99999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.pop-button img{
+  width:80%;
+}
+.pop-button .chat-btn {
+  animation: updown 1.5s infinite;
+  /* -webkit-animation:updown 1.5s infinite; */
+  /* 다른 브라우저에서도 작동 될 수 있게 하기 위해 -webkit을 사용. */
+}
+/* 애내메이션 효과 */
+@keyframes updown {
+  0% {
+    transform: translatey(0);
+  }
+  50% {
+    transform: translatey(-10%);
+  }
+  100% {
+    transform: translatey(0);
+  }
+}
 /* =================================================== */
 /* 참여하기 */
 .takejoin {
-  font-family: "KBO-Dia-Gothic_light";
   width: 100%;
   position: fixed;
   background-color: #fff;
@@ -233,7 +220,6 @@ footer .line {
   display: none;
 }
 .takejoin .heart {
-  font-family: "KBO-Dia-Gothic_light";
   width: 100%;
   background-color: #134aa9;
   color: #fff;
@@ -241,25 +227,11 @@ footer .line {
   font-size: 2vw;
   display: none;
 }
+/* =================================================== */
 /* 반응형 */
-/* =================================================== */
-@media screen and (max-width: 1870px) {
-  .animated-title {
-    margin-bottom: 1%;
-    padding: 4%;
-  }
-}
-
-/* =================================================== */
-
-@media screen and (max-width: 1500px) {
-  .pop-button {
-    right: 2.2%;
-    bottom: 15%;
-  }
-  .snsImage-btn1 {
-    top: 15px;
-    right:  2800%;
+@media screen and (max-width: 1300px) {
+  .section4 .nanumsns-swiper .swiper-button-next img {
+    right: 650px;
   }
   .section4 .snstext {
     padding-top: 15%;
@@ -269,27 +241,18 @@ footer .line {
     margin-top: -4%;
     margin-bottom: 0%;
   }
-
-}
-/* ===================================================== */
-@media screen and (max-width: 1300px) {
-  .snstext {
+  .pop-button {
     display: none;
   }
-  .snsImage-btn1 {
+  footer .line {
     display: none;
   }
-  .section4 .nanumsns-swiper {
-    width: 100%;
-    position: relative;
+  footer .left img {
+    width: 15%;
   }
 }
 /* ===================================================== */
 @media screen and (max-width: 859px) {
-  .pop-button {
-    right: 0%;
-    bottom: 15%;
-  }
   .section4 .nanumsns-swiper .swiper-button-next img {
     display: none;
   }
@@ -303,19 +266,8 @@ footer .line {
     font-size: 3vw;
     font-weight: 800;
   }
-  .section5 .content img {
-    width: 200%;
-  }
-  .section5 .animated-title {
-    padding: 8%;
-    padding-top: 4%;
-    padding-bottom: -2%;
-  }
-  footer .left img {
-    width: 15%;
-  }
   footer {
-    height: 480px;
+    height: 500px;
     width: 100%;
   }
   footer .right {
@@ -334,25 +286,18 @@ footer .line {
     text-align: left;
     color: #ffffff79;
   }
-  footer .right p {
-    line-height: 1.5;
-    text-align: left;
-    letter-spacing: 1px;
-    font-family: "KBO-Dia-Gothic_light";
-  }
   footer .left {
     float: left;
     margin: 8%;
   }
 
   footer .left .tell {
-    margin-top: -15%;
+    margin-top: -20%;
     display: block;
     font-size: 5vw;
     text-align: left;
   }
   footer .left button {
-    border-radius: 7px;
     width: 130px;
     height: 50px;
     margin: 20px 5px;
@@ -360,27 +305,23 @@ footer .line {
     border: 1px solid #fff;
     color: #fff;
     font-family: "KBO-Dia-Gothic_light";
-    letter-spacing: 1px;
+    letter-spacing: 2px;
   }
-
-  /* footer p::after {
+  footer p {
+    letter-spacing: 2px;
+  }
+  footer p::after {
     content: "";
     display: block;
     width: 145%;
     height: 1px;
     background-color: #fff;
     margin-top: 10%;
-  } */
+  }
 }
 
 /* ===================================================== */
 @media screen and (max-width: 768px) {
-  .pop-button {
-    position: relative;
-    position: fixed;
-    right: -0.5%;
-    bottom: 15%;
-  }
   .section5 .content img {
     width: 300%;
   }
@@ -403,7 +344,6 @@ footer .line {
     margin-bottom: 10%;
   }
   .snsnanum img {
-    border-radius: 10%;
     width: 40%;
     padding: 2%;
   }
@@ -413,7 +353,7 @@ footer .line {
     padding-bottom: -4%;
   }
   footer {
-    height: 430px;
+    height: 450px;
     width: 100%;
   }
   footer .right h1 {
@@ -427,12 +367,6 @@ footer .line {
     font-size: 5vw;
     text-align: left;
     color: #ffffff79;
-  }
-  footer .right p {
-    line-height: 1.5;
-    text-align: left;
-    letter-spacing: 1px;
-    font-family: "KBO-Dia-Gothic_light";
   }
   footer .left {
     float: left;
@@ -452,37 +386,28 @@ footer .line {
     background-color: #333;
     border: 1px solid #fff;
     color: #fff;
-    letter-spacing: 1px;
   }
-  /* footer p::after {
+  footer p {
+    letter-spacing: 2px;
+  }
+  footer p::after {
     content: "";
     display: block;
     width: 130%;
     height: 1px;
     background-color: #fff;
     margin-top: 8%;
-  } */
+  }
 }
-
 /* ==================================================== */
 @media screen and (max-width: 480px) {
-  .flyingbanner {
-    display: none;
-  }
-  /* .section4{
-    margin-top: -10%;
-  } */
+  /* 참여하기 */
   .section4 .snstext h1 {
     font-size: 8vw;
     font-weight: 800;
   }
   .snsnanum {
     margin-top: -15%;
-  }
-  .snsnanum img {
-    border-radius: 10%;
-    width: 40%;
-    padding: 2%;
   }
   .section5 .content img {
     width: 350%;
@@ -530,10 +455,9 @@ footer .line {
     color: #fff;
   }
   footer .right p {
-    line-height: 1.5;
-    text-align: left;
-    letter-spacing: 1px;
-    font-family: "KBO-Dia-Gothic_light";
+    line-height: 1.3;
+    font-size: 16px;
+    letter-spacing: 2px;
   }
   footer .left {
     margin: 0 auto;
@@ -556,9 +480,8 @@ footer .line {
     border: 1px solid #fff;
     color: #fff;
     font-family: "KBO-Dia-Gothic_light";
-    letter-spacing: 1px;
+    letter-spacing: 2px;
   }
-
   footer p::after {
     content: "";
     display: block;
@@ -590,8 +513,7 @@ footer .line {
     margin-top: 10%;
   }
   .snsnanum img {
-    border-radius: 10%;
-    width: 40%;
+    width: 50%;
     padding: 2%;
   }
   .section5 .content img {
@@ -619,10 +541,8 @@ footer .line {
   }
 
   footer .right p {
-    line-height: 1.5;
-    text-align: left;
-    letter-spacing: 1px;
-    font-family: "KBO-Dia-Gothic_light";
+    line-height: 1.3;
+    font-size: 15px;
   }
   footer .left {
     margin: 0 auto;
@@ -644,7 +564,7 @@ footer .line {
     border: 1px solid #fff;
     color: #fff;
     font-family: "KBO-Dia-Gothic_light";
-    letter-spacing: 1px;
+    letter-spacing: 2px;
   }
   footer p::after {
     content: "";
