--- a/css/login.css
+++ b/css/login.css
@@ -19,18 +19,15 @@
   font-family: "KBO-Dia-Gothic_bold";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/KBO-Dia-Gothic_bold.woff") format("woff");
 }
-header {
-  height: 80px;
-}
- /* 테두리 강조 스타일 */
- .focused {
+/* 테두리 강조 스타일 */
+.focused {
   border: 2px solid #007bff;
   outline: none; /* 포커스 테두리 제거 */
 }
 .error {
-  line-height: 2;
+  line-height: 3;
   color: red;
-  font-size:13px;
+  font-size: 13px;
 }
 .logingform {
   margin-top: 150px;
@@ -60,10 +57,8 @@ form > input {
   margin: 0 auto;
   margin-top: 20px;
   border: none;
-
-  
 }
-form .check{
+form .check {
   margin: 20px 0;
   display: flex;
   justify-content: center;
@@ -74,16 +69,15 @@ form button {
   display: block;
   padding: 3%;
   width: 60%;
-  height: 6vh;
   border: none;
-  border-radius: 20px;
+  border-radius: 7px;
   background-color: #134aa9;
   color: #fff;
   font-size: 1vw;
   cursor: pointer;
   line-height: 1;
 }
-form button a{
+form button a {
   color: #fff;
   text-decoration: none;
 }
@@ -99,48 +93,77 @@ form button a{
   margin: 5%;
 }
 /* 반응형 */
-@media screen and (max-width: 1000px) {
-  form button{
+@media screen and (max-width: 1300px) {
+  .login {
+    width: 50%;
+  }
+  .logingform h1 {
+    font-size: 5vw;
+    margin-top: 5%;
+  }
+  form button {
     font-size: 1.5vw;
   }
+  .error {
+    line-height: 3;
+    color: red;
+    font-size: 13px;
   }
-  @media screen and (max-width: 768px) {
-    .error {
-      line-height: 2;
-      color: red;
-      font-size:13px;
-    }
-    .login{
-      width: 50%;
-    }
-    .logingform h1 {
-      font-size: 5vw;
-      margin-top: 5%;
-    }
-    form button{
-      font-size: 2vw;
-    }
-    .icon img {
-      display: inline;
-      width: 15%;
-      margin: 5%;
-    }
-    }
-    @media screen and (max-width: 480px){
-      .error {
-        line-height: 2;
-        color: red;
-        font-size:13px;
-      }
-      .login{
-        width: 70%;
-      }
-      .logingform h1 {
-        font-size: 6vw;
-        margin-top: 10%;
-    }
-    form button{
-      font-size: 3vw;
+  .icon img {
+    display: inline;
+    width: 10%;
+    margin: 5%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .error {
+    line-height: 2;
+    color: red;
+    font-size: 13px;
+  }
+  .login {
+    width: 50%;
+  }
+  .logingform h1 {
+    font-size: 5vw;
+    margin-top: 5%;
+  }
+  form button {
+    font-size: 2vw;
+  }
+  .icon img {
+    display: inline;
+    width: 12%;
+    margin: 5%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .logingform h1 {
+    font-size: 5vw;
+    margin-bottom: 10%;
+  }
+  .login {
+    padding-top: 3%;
+    margin: 0 auto;
+    width: 50%;
+    height: 130%;
+    display: block;
+    background-color: #fff;
+  }
+  .error {
+    line-height: 2;
+    color: red;
+    font-size: 13px;
+  }
+  .login {
+    width: 70%;
+  }
+  .logingform h1 {
+    font-size: 6vw;
+    margin-top: 10%;
+  }
+  form button {
+    font-size: 3vw;
   }
   .icon img {
     display: inline;
@@ -148,32 +171,60 @@ form button a{
     margin: 2%;
     padding: 4%;
   }
-  form .check{
+  form .check {
     margin: 15px 0;
     font-size: 14px;
   }
-  .line{
+  form > input {
+    padding-left: 5%;
+    position: relative;
     display: block;
+    width: 80%;
+    height: 5vh;
+    text-align: left;
+    margin: 0 auto;
+    margin-top: 20px;
+    border: 1px solid #134aa9;
+  }
+  form > button {
+    margin: 0 auto;
+    display: block;
+    padding: 6%;
+    width: 80%;
+    border: none;
+    border-radius: 7px;
+    background-color: #134aa9;
+    color: #fff;
+    font-size: 1vw;
+    cursor: pointer;
+    line-height: 1;
+  }
+  form > button a {
+    font-size: 16px;
+    color: #fff;
+    text-decoration: none;
+  }
+  .icon {
+    display: inline-block;
   }
 }
-@media screen and (max-width: 320px){
+@media screen and (max-width: 320px) {
   .error {
     line-height: 2;
     color: red;
-    font-size:13px;
+    font-size: 13px;
   }
-  .login{
+  .login {
     width: 70%;
   }
-  .logingform h1{
+  .logingform h1 {
     font-weight: bold;
-  }   
-   form button{
+  }
+  form button {
     font-size: 4vw;
-    
-}
-footer{
-  width: 100%;
-  height: 420px;
-}
+  }
+  footer {
+    width: 100%;
+    height: 420px;
+  }
 }
