--- a/css/seunga.css
+++ b/css/seunga.css
@@ -148,7 +148,7 @@ nav {
   position: relative;
 }
 .visual-img {
-  width: 100%;
+  width: 90%;
   height: auto;
   margin: 80px auto;
 }
@@ -392,7 +392,7 @@ nav {
   justify-content: space-between;
   gap: 6%;
   margin: 0 auto;
-  padding: 6% 4% 0 4%;
+  padding: 6% 2% 0 2%;
 }
 .service-box figure {
   width: calc(100% / 3);
@@ -459,18 +459,6 @@ figcaption p {
   font-size: 18px;
   margin-top: 10px;
 }
-/* .service a {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-} */
-/* .service:hover figcaption,
-.service.hover figcaption {
-  top: 80px;
-} */
 .service * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -507,11 +495,9 @@ figcaption p {
   .sb-img-title1, .sb-img-title2{
     font-size: 24px;
   }
-
-
   .service-box {
-    gap: 2%;
-    padding: 4% 0 0 0;
+    /* gap: 2%; */
+    /* padding: 4% 0 0 0; */
     /* background-color: red; */
   }
   .service h3 {
@@ -564,11 +550,11 @@ figcaption p {
   }
   .sec1-main-text h4 {
     font-size: 28px;
-    top: -40px;
+    top: -100px;
   }
   .service-box {
     gap: 2%;
-    padding: 8% 0 0 0;
+    /* padding: 8% 0 0 0; */
     /* background-color: red; */
   }
   .sb-img-title1, .sb-img-title2{
@@ -669,7 +655,12 @@ padding: 20px;
   }
   .sec1-main-text h4 {
     font-size: 22px;
-    top: -40px;
+    top: -100px;
+    padding: 20px;
+  }
+  .service3-text{
+    top: 5%;
+    padding: 15px 25px 100px;
   }
   .service-box {
     gap: 2%;
@@ -747,12 +738,14 @@ padding: 20px;
   }
 }
 @media screen and (max-width: 450px) {
+.mb-visual-img{
+  margin: 30px;
+}
   .counter-wrapper {      
    padding: 25px 0;
   }
   .counter-wrapper {
-
-    bottom: 6%;
+    bottom: 2%;
   }
  .counter {
      line-height: 20px;
@@ -766,7 +759,6 @@ padding: 20px;
  .section1 {
    padding: 10% 0 15%;
  }
- 
  .sec1-main-text h4{
   font-size: 22px;
   top: -40%;
@@ -774,7 +766,7 @@ padding: 20px;
 }
 .service3-text{
   top: 25%;
-  left: 12px;
+  left: 8px;
   padding: 0 5% 0 5% ;
 }
 h3 {
@@ -799,8 +791,12 @@ height:30px;
 }
 }
 @media screen and (max-width: 420px) {
+  .sec1-main-text h4{
+    top: -70%;
+    /* padding: 20px; */
+  }
   .section1 {
-    padding: 16% 0 8% 0;
+    padding: 30% 0 20% 0;
   }
   .service:hover figcaption {
     top: 0
