--- a/css/seunga.css
+++ b/css/seunga.css
@@ -52,31 +52,6 @@ a {
 */
 
 /* =======================================================승아 */
-/* <!-- 탑버튼 --> */
-.top-button {
-position: relative;
-  z-index: 999999;
-  display: block;
-}
-.top-button .top-btn {
-  display: block;
-    position: fixed;
-      bottom: 10%;
-  right: 5%;
-  background-color: rgba(255, 255, 255, 0.8);
-  /* background-color: #134aa9; */
-  box-shadow: 2px 2px 2px #a7a7a7;
-  border-radius: 50%;
-  width: 50px;
-  line-height: 50px;
-  text-align: center;
-}
-.top-button .top-btn img {
-  transform: rotate(180deg);
-}
-.top-button .top-btn img.up {
-  transform: rotate(0deg);
-}
 /* 헤더 */
 header {
   position: fixed; /* 네비게이션 바가 항상 화면 상단에 고정될 수 있도록 */
@@ -84,6 +59,7 @@ header {
   width: 100%; /* 전체 너비 차지 */
   height: auto;
   background-color: #fff; 
+  /* background-color: red; */
   /* background-color: rgba(255, 255, 255, 0.7); */
   z-index: 99999999999; /* 네비게이션 바가 다른 요소 위에 올라가도록 z-index 설정 */
   box-shadow: -1px 2px 10px 4px rgba(0, 0, 0, 0.05); /* 네비게이션 바의 box-shadow 효과 */
@@ -148,7 +124,7 @@ nav {
   position: relative;
 }
 .visual-img {
-  width: 90%;
+  width: 100%;
   height: auto;
   margin: 80px auto;
 }
@@ -738,9 +714,9 @@ padding: 20px;
   }
 }
 @media screen and (max-width: 450px) {
-.mb-visual-img{
-  margin: 30px;
-}
+  .mb-visual-img{
+    margin-top: 30px;
+  }
   .counter-wrapper {      
    padding: 25px 0;
   }
@@ -757,11 +733,11 @@ padding: 20px;
          font-size: 22px;
  }
  .section1 {
-   padding: 10% 0 15%;
+   padding: 12% 0 8%;
  }
  .sec1-main-text h4{
   font-size: 22px;
-  top: -40%;
+  top: -60%;
   padding: 20px;
 }
 .service3-text{
@@ -776,7 +752,7 @@ h3 {
 display: none;
  }
 .service-box{
-padding-top: 30px;
+padding-top: 10px;
 }
  .service3-text span{
 font-size: 14px;
